# physics_tetris

./: .gitignore  Cargo.toml  SDL2.lib  SDL2_gfx.lib  SDL2_mixer.lib  aarch64-linux-android-custom.json  android-build.ps1  armv7-linux-androideabi-custom.json  build.rs  i686-linux-android-custom.json
.cargo/: config.toml
src/: game.rs  lib.rsunused  main.rs  util.rs
src/game/: tetromino.rs
